# collectors

./: .env_example  .pre-commit-config.yaml  README.md  docker-compose.yml  pyproject.toml  requirements.txt
collector/: admin.py  models.py
collector/migrations/: 0001_initial.py  0002_alter_collectordata_personal_number.py  0002_alter_collectordata_registration_expiration.py  0002_alter_collectordata_table_comment_and_more.py  0002_rename_add_to_whatsapp_collectordata_whatsapp_and_more.py  0003_alter_collectordata_table_comment_and_more.py  0003_collectordata_created_at_collectordata_last_modified.py
collector/static/: confirm_empty_field.js
collector/utils/: date_utils.py  status_utils.py
collector/validators/: __init__.py  validators.py
main/: settings.py  urls.py
user/: models.py
user/migrations/: 0001_initial.py
